@@ -17,3 +17,4 @@
 ../extatom6.hex extatom6.out
 ../extatom9.hex extatom9.out
 ../percentparser.hex percentparser.out
+../empty.hex empty.out
